--- a/src/assets/scss/now-ui-dashboard/_cards.scss
+++ b/src/assets/scss/now-ui-dashboard/_cards.scss
@@ -4,6 +4,7 @@
     display: inline-block;
     position: relative;
     width: 100%;
+    float: left;
     margin-bottom: 20px;
     box-shadow: $box-shadow;
 
