--- a/src/assets/scss/now-ui-dashboard.css
+++ b/src/assets/scss/now-ui-dashboard.css
@@ -1,19 +1,3 @@
-/*!
-
- =========================================================
- * Now UI Dashboard React - v1.1.0 based on Now UI Dashboard - v1.1.0
- =========================================================
-
- * Product Page: https://www.creative-tim.com/product/now-ui-dashboard
- * Copyright 2018 Creative Tim (http://www.creative-tim.com)
-
- * Designed by www.invisionapp.com Coded by www.creative-tim.com
-
- =========================================================
-
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
- */
 /*     brand Colors              */
 /*      light colors         */
 /*!
@@ -1634,7 +1618,6 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     .navbar .navbar-nav .nav-link.btn.btn-sm {
       padding: 5px 15px; }
   .navbar .navbar-nav .nav-link {
-    text-transform: uppercase;
     font-size: 0.7142em;
     padding: 0.5rem 0.7rem;
     line-height: 1.625rem;
@@ -1673,7 +1656,6 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
     border-radius: 50%;
     border: 1px solid transparent; }
   .navbar .navbar-brand {
-    text-transform: uppercase;
     font-size: 0.8571em;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -3269,6 +3251,7 @@ Created using IcoMoon - icomoon.io
   display: inline-block;
   position: relative;
   width: 100%;
+  float: left;
   margin-bottom: 20px;
   box-shadow: 0 1px 15px 1px rgba(39, 39, 39, 0.1); }
   .card .card-body {
