--- a/src/assets/scss/now-ui-dashboard.css
+++ b/src/assets/scss/now-ui-dashboard.css
@@ -2645,19 +2645,19 @@ Created using IcoMoon - icomoon.io
 
 .sidebar,
 .off-canvas-sidebar {
-  position: fixed;
+  position: absolute;
   top: 0;
   height: 100%;
   bottom: 0;
-  width: 260px;
+  width: 0px;
   left: 0;
   z-index: 1031; }
   .sidebar .sidebar-wrapper,
   .off-canvas-sidebar .sidebar-wrapper {
-    position: relative;
+    position: absolute;
     height: calc(100vh - 75px);
     overflow: auto;
-    width: 260px;
+    width: 0px;
     z-index: 4;
     padding-bottom: 100px; }
     .sidebar .sidebar-wrapper .dropdown .dropdown-backdrop,
@@ -2948,8 +2948,8 @@ Created using IcoMoon - icomoon.io
 
 .main-panel {
   position: relative;
-  float: right;
-  width: calc(100% - 260px);
+  float: left;
+  width: 100%;
   background-color: #E3E3E3;
   background-color: #ebecf1;
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -2960,7 +2960,7 @@ Created using IcoMoon - icomoon.io
   .main-panel div > .content {
     padding: 0 30px 30px;
     min-height: calc(100vh - 123px);
-    margin-top: -30px; }
+    margin-top: 50px; }
   .main-panel > .navbar {
     margin-bottom: 0; }
   .main-panel .header {
@@ -2984,7 +2984,7 @@ Created using IcoMoon - icomoon.io
     -webkit-overflow-scrolling: touch; } }
 
 .panel-header {
-  height: 260px;
+  height: 0px;
   padding-top: 80px;
   padding-bottom: 45px;
   position: relative;
@@ -3003,10 +3003,10 @@ Created using IcoMoon - icomoon.io
       color: #FFFFFF; }
 
 .panel-header-sm {
-  height: 135px; }
+  height: 0px; }
 
 .panel-header-lg {
-  height: 380px; }
+  height: 0px; }
 
 .footer {
   padding: 24px 0; }
