--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -25,7 +25,7 @@
   
 }
 .card-title-description{
-
+    text-align: center;
     margin:10px;
     padding:10px;
 }
@@ -145,7 +145,7 @@ float: right;
 
   .card-content{
       padding: 15px;
-      margin:15px;
+      margin:25px;
       width: 100%;
   }
   #slide{
