--- a/src/assets/scss/now-ui-dashboard.css
+++ b/src/assets/scss/now-ui-dashboard.css
@@ -1236,10 +1236,7 @@ p.description {
   font-size: 1.14em; }
 
 .title {
-  font-weight: 600; 
-  text-align: center;
-  font-size: 2em;
-}
+  font-weight: 700; }
   .title.title-up {
     text-transform: uppercase; }
     .title.title-up a {
