--- a/src/assets/scss/now-ui-dashboard.scss
+++ b/src/assets/scss/now-ui-dashboard.scss
@@ -34,3 +34,12 @@
 @import "now-ui-dashboard/cards/card-map";
 
 @import "now-ui-dashboard/responsive";
+
+//check
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+ 
+@import "../node_modules/Font-Awesome/scss/variables";
+ 
+@import "../awesome-bootstrap-checkbox";
