--- a/src/assets/css/tasks.css
+++ b/src/assets/css/tasks.css
@@ -161,3 +161,11 @@ float: right;
     height: 20px;
     width: 100px;
 }
+.cars-img{
+    height: 300px;
+    width: 400px;
+    padding: 20px;
+    margin: 20px;
+    display: block;
+    position: relative;
+}
